			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1356 2000/10/29 11:51:00 fujisawa Exp $

<200010>
2000-10-29  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* Fixed NATPT memory leak.  When TCP session is finished, memory
	  which holds tcp information is not freed.

2000-10-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/rtadvd/if.c (if_getmtu): made some clarifications:
	  - first try getifaddrs(), and then do SIOCGIFMTU for safety. The
	    revised logic will safe environments with poor getifaddrs()
	    implementation.
	  - avoid referring to freed data by delaying to call freeifaddrs().
	* kame/kame/rtadvd/rtadvd.conf.5: insistently noted that the
	configuration file can be omitted for those who do not read
	rtadvd(8).

2000-10-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6_rtr.c (defrouter_select): do not install a
	route to the default interface as default route if the node acts
	as a router, because such default route might conflict with a
	default route installed from a user application (e.g. routing
	daemon).

2000-10-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/v6test/getconfig.c (make_{tcp,udp}): TCP/UDP data
	buffer can be specified.
	based on a patch from: Tomomi Suzuki <stomomi@ebina.hitachi.co.jp>

2000-10-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6.c (in6_ifscrub): checked the existence of
	dstaddr before calling rtinit(). This fix will solve the KAME PR
	sys/295.

Sun Oct 22 23:08:22 JST 2000  itojun@iijlab.net
	* kame/sys/netinet6/in6_pcb.c (freebsd2/bsdi3):
	  don't do anything special against IPv4 mapped address, as we don't
	  support them.

Sat Oct 21 01:40:20 JST 2000  itojun@iijlab.net
	* bindtest: add summary mode (-s).  from yoshfuji.

Fri Oct 20 04:20:12 JST 2000  itojun@iijlab.net
	* openbsd: enable IPv6 PTMUD DoS prevention.  validates TCP6/UDP6 PMTUD 
	  by existence of connected pcb.

Fri Oct 20 03:14:55 JST 2000  itojun@iijlab.net