@@ -1,4 +1,4 @@
-/*	$KAME: in6.h,v 1.63 2000/10/30 14:48:44 itojun Exp $	*/
+/*	$KAME: in6.h,v 1.64 2000/10/31 04:36:17 itojun Exp $	*/
 
 /*
  * Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -457,6 +457,9 @@ struct route_in6 {
 #define IPV6_ESP_NETWORK_LEVEL	55   /* int; full-packet encryption */
 #define IPSEC6_OUTSA		56   /* set the outbound SA for a socket */
 #endif
+
+#define IPV6_RECVTCLASS		57 /* bool; recv traffic class values */
+#define IPV6_TCLASS		58 /* u_int8_t; send traffic class value */
 /* to define items, should talk with KAME guys first, for *BSD compatibility */
 
 #define IPV6_RTHDR_LOOSE     0 /* this hop need not be a neighbor. XXX old spec */
